--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "C_Cpp.default.compilerPath": "c:\\Users\\brand\\Downloads\\Curso C\\prueba.c"
+    "C_Cpp.default.compilerPath": "c:\\Users\\brand\\Downloads\\Curso C\\prueba.c",
+    "C_Cpp.errorSquiggles": "enabled"
 }
